@@ -1,6 +1,6 @@
 package com.iyoungman.bun.account;
 
-import java.util.List;
+import java.util.Arrays;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 
@@ -13,7 +13,7 @@ public class UserAccount extends User {
     private Account account;
 
     public UserAccount(Account account) {
-        super(account.getUsername(), account.getPassword(), List.of(new SimpleGrantedAuthority("ROLE_" + account.getRole())));
+        super(account.getUsername(), account.getPassword(), Arrays.asList(new SimpleGrantedAuthority(account.getRole())));
         this.account = account;
     }
 
